crates/decorous-frontend/src/component/snapshots/decorous_frontend__component__tests__hoists_exports.snap
---
source: crates/decorous-frontend/src/component/mod.rs
expression: component.hoist()
---
[
    EXPORT_DECL@1..42
      EXPORT_KW@1..7 "export"
      WHITESPACE@7..8 " "
      FN_DECL@8..42
        FUNCTION_KW@8..16 "function"
        WHITESPACE@16..17 " "
        NAME@17..18
          IDENT@17..18 "x"
        PARAMETER_LIST@18..20
          L_PAREN@18..19 "("
          R_PAREN@19..20 ")"
        WHITESPACE@20..21 " "
        BLOCK_STMT@21..42
          L_CURLY@21..22 "{"
          WHITESPACE@22..23 " "
          EXPR_STMT@23..40
            CALL_EXPR@23..40
              DOT_EXPR@23..34
                NAME_REF@23..30
                  IDENT@23..30 "console"
                DOT@30..31 "."
                NAME@31..34
                  IDENT@31..34 "log"
              ARG_LIST@34..40
                L_PAREN@34..35 "("
                LITERAL@35..39
                  STRING@35..39 "\"hi\""
                R_PAREN@39..40 ")"
          WHITESPACE@40..41 " "
          R_CURLY@41..42 "}"
    ,
]
