crates/decorous-frontend/src/component/snapshots/decorous_frontend__component__tests__hoists_imports.snap
---
source: crates/decorous-frontend/src/component/mod.rs
expression: component.hoist()
---
[
    IMPORT_DECL@23..46
      IMPORT_KW@23..29 "import"
      WHITESPACE@29..30 " "
      NAME@30..34
        IDENT@30..34 "data"
      WHITESPACE@34..35 " "
      FROM_KW@35..39 "from"
      WHITESPACE@39..40 " "
      LITERAL@40..46
        STRING@40..46 "\"data\""
    ,
]
