crates/decorous-frontend/src/component/snapshots/decorous_frontend__component__tests__merges_previously_assigned_class_in_reassignment_with_js.snap
---
source: crates/decorous-frontend/src/component/mod.rs
expression: component.fragment_tree()
---
[
    Node {
        metadata: FragmentMetadata {
            id: 0,
            parent_id: None,
            location: Location {
                offset: 29,
                length: 26,
            },
            scope: None,
        },
        node_type: Element(
            Element {
                tag: "p",
                attrs: [
                    KeyValue(
                        "class",
                        Some(
                            JavaScript(
                                SCRIPT@0..20
                                  EXPR_STMT@0..20
                                    TEMPLATE@0..20
                                      BACKTICK@0..1 "`"
                                      TEMPLATE_ELEMENT@1..11
                                        DOLLARCURLY@1..3 "${"
                                        LITERAL@3..10
                                          STRING@3..10 "\"green\""
                                        R_CURLY@10..11 "}"
                                      TEMPLATE_CHUNK@11..19 " decor-0"
                                      BACKTICK@19..20 "`"
                                ,
                            ),
                        ),
                    ),
                ],
                children: [
                    Node {
                        metadata: FragmentMetadata {
                            id: 1,
                            parent_id: Some(
                                0,
                            ),
                            location: Location {
                                offset: 0,
                                length: 0,
                            },
                            scope: None,
                        },
                        node_type: Text(
                            Text(
                                "Hello!",
                            ),
                        ),
                    },
                ],
            },
        ),
    },
]
