crates/decorous-frontend/src/component/snapshots/decorous_frontend__component__tests__modifies_css_selectors_to_use_component_id.snap
---
source: crates/decorous-frontend/src/component/mod.rs
expression: component.css()
---
Some(
    Css {
        rules: [
            Regular(
                RegularRule {
                    selector: [
                        Selector {
                            parts: [
                                SelectorPart {
                                    text: Some(
                                        "p.decor-0",
                                    ),
                                    pseudoes: [
                                        Class {
                                            name: "has",
                                            value: Some(
                                                "span",
                                            ),
                                        },
                                    ],
                                },
                            ],
                        },
                    ],
                    declarations: [
                        Declaration {
                            name: "color",
                            values: [
                                Css(
                                    "red",
                                ),
                            ],
                        },
                    ],
                },
            ),
        ],
    },
)
