crates/decorous-frontend/src/component/snapshots/decorous_frontend__component__tests__reactive_blocks_are_still_included_as_toplevel_nodes.snap
---
source: crates/decorous-frontend/src/component/mod.rs
expression: component.toplevel_nodes()
---
[
    ToplevelNodeData {
        node: VAR_DECL@4..14
          IDENT@4..7 "let"
          WHITESPACE@7..8 " "
          DECLARATOR@8..13
            SINGLE_PATTERN@8..9
              NAME@8..9
                IDENT@8..9 "x"
            WHITESPACE@9..10 " "
            EQ@10..11 "="
            WHITESPACE@11..12 " "
            LITERAL@12..13
              NUMBER@12..13 "3"
          SEMICOLON@13..14 ";"
        ,
        substitute_assign_refs: false,
    },
    ToplevelNodeData {
        node: BLOCK_STMT@18..32
          L_CURLY@18..19 "{"
          WHITESPACE@19..20 " "
          VAR_DECL@20..30
            IDENT@20..23 "let"
            WHITESPACE@23..24 " "
            DECLARATOR@24..29
              SINGLE_PATTERN@24..25
                NAME@24..25
                  IDENT@24..25 "y"
              WHITESPACE@25..26 " "
              EQ@26..27 "="
              WHITESPACE@27..28 " "
              LITERAL@28..29
                NUMBER@28..29 "4"
            SEMICOLON@29..30 ";"
          WHITESPACE@30..31 " "
          R_CURLY@31..32 "}"
        ,
        substitute_assign_refs: false,
    },
]
