crates/decorous-frontend/src/component/snapshots/decorous_frontend__component__tests__warn_on_unbound_variable_that_is_not_a_global.snap
---
source: crates/decorous-frontend/src/component/mod.rs
expression: component.report()
---
Report {
    diagnostics: [
        Diagnostic {
            msg: "possibly unbound variable: x",
            severity: Warning,
            helpers: [],
            offset: 0,
            note: None,
        },
    ],
}
